# ews-gis-assets

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  Makefile  README.md  bumpver.toml  download_austro_control.py  main.py  pyproject.toml  ruff.toml
.github/instructions/: markdown.instructions.md
.github/workflows/: update.yaml
data/: austro_control_icao.geojson  austro_control_icao.gpkg  austro_control_icao.hash  windkraftanlagen.geojson  windkraftanlagen.gpkg  windkraftanlagen.hash
notebooks/: test.ipynb
scripts/: pre-commit-hook.sh
src/ews_gis_assets/: __init__.py  _version.py  austro_control.py  constants.py  helpers.py  noe.py
